--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.1.10",
     "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
+    "resend": "^6.1.0",
     "twilio": "^5.7.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
